--- a/blog.qmd
+++ b/blog.qmd
@@ -1,12 +1,20 @@
 ---
 title: "Blog"
 listing:
-  contents: posts
+  contents: posts/**/*.qmd
   sort: "date desc"
   type: default
   categories: true
-  sort-ui: false
-  filter-ui: false
+  sort-ui: true
+  filter-ui: true
+  fields: [date, title, description, categories]
+  feed: true
 page-layout: full
 title-block-banner: true
 ---
+
+# Series
+
+#### [ggplot2-series](ggplot-series.html)
+
+This is my ggplot series I suppose.
