--- a/ggplot-series.qmd
+++ b/ggplot-series.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Series: Everything I know about ggplot2"
 listing:
-  contents: posts/ggplot2
+  contents: posts/ggplot2/**/*.qmd
   sort: "date desc"
   type: default
   categories: false
