--- a/index.qmd
+++ b/index.qmd
@@ -15,4 +15,4 @@ about:
       href: https://github.com
 ---
 
-These are some things I know about R and Data Science
+These are some things I know about R and Data Science - test
