--- a/posts/ggplot2/Accurately Viewing and Saving Plots with Camcorder/index.qmd
+++ b/posts/ggplot2/Accurately Viewing and Saving Plots with Camcorder/index.qmd
@@ -9,3 +9,5 @@ categories: [ggplot2]
 ```
 
 Something I have always struggled with ggplot is after I have spent how many hours tinkering and finessing a plot, I will export it
+
+THIS IS A TEST
